[gd_scene load_steps=3 format=3 uid="uid://bcdpclgo6lo6q"]

[ext_resource type="Script" path="res://Menu.gd" id="1_dhpja"]
[ext_resource type="Script" path="res://GridContainer.gd" id="2_lm4x7"]

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_dhpja")

[node name="HostButton" type="Button" parent="."]
layout_mode = 1
offset_left = 11.0
offset_top = 72.0
offset_right = 169.0
offset_bottom = 103.0
text = "Host
"

[node name="Start Game" type="Button" parent="."]
layout_mode = 0
offset_left = 11.0
offset_top = 335.0
offset_right = 169.0
offset_bottom = 366.0
text = "Start Game
"

[node name="Disconnect" type="Button" parent="."]
layout_mode = 0
offset_left = 11.0
offset_top = 196.0
offset_right = 169.0
offset_bottom = 227.0
text = "Disconnect
"

[node name="JoinButton" type="Button" parent="."]
layout_mode = 1
offset_left = 11.0
offset_top = 159.0
offset_right = 169.0
offset_bottom = 190.0
text = "Join
"

[node name="PlayerDisplayGrid" type="GridContainer" parent="."]
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -372.0
offset_top = -282.0
offset_right = -48.0
offset_bottom = 283.0
grow_horizontal = 0
grow_vertical = 2
theme_override_constants/v_separation = 37
script = ExtResource("2_lm4x7")

[node name="Name" type="LineEdit" parent="."]
layout_mode = 0
offset_left = 11.0
offset_top = 23.0
offset_right = 167.0
offset_bottom = 69.0
text = "Name"
placeholder_text = "Name"

[node name="IP" type="LineEdit" parent="."]
layout_mode = 0
offset_left = 11.0
offset_top = 107.0
offset_right = 167.0
offset_bottom = 153.0
text = "127.0.0.1"
placeholder_text = "IP"

[connection signal="button_down" from="HostButton" to="." method="_on_host_button_button_down"]
[connection signal="button_down" from="Start Game" to="." method="_on_start_game_button_down"]
[connection signal="button_down" from="Disconnect" to="." method="_on_disconnect_button_down"]
[connection signal="button_down" from="JoinButton" to="." method="_on_join_button_button_down"]
[connection signal="text_changed" from="Name" to="." method="_on_name_text_changed"]
[connection signal="text_changed" from="IP" to="." method="_on_ip_text_changed"]
